<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/back_button"
        android:text="@string/back"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/last_refreshed"
        android:text="@string/last_refreshed"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/next_refresh"
        android:text="@string/refreshing_in_x_seconds"
        android:layout_margin="5dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/leaderboard_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</LinearLayout>